# godot-vlc-rs

./: .gitignore  Cargo.toml  build.rs
.github/workflows/: build.yml
demo/: .gitignore
demo/addons/godot-vlc/: .gdextension
scripts/: zip.ps1
src/: lib.rs  video_stream_vlc.rs  vlc_instance.rs
